--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/new_address_hint"
+        android:inputType="text"
         android:textColor="#0C0C0C"
         android:textColorHint="#97050505"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +88,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/address_hint"
+        android:inputType="text"
         android:textColor="#0C0C0C"
         android:textColorHint="#97050505"
         app:layout_constraintStart_toStartOf="parent"
